k8s/frontend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:       # Pod Should contain same labels
    app: asgard-frontend
    tier: frontend
  ports:
    - protocol: TCP
      port: 5580   
      targetPort: 80
  type: ClusterIP
